[gd_scene load_steps=7 format=3 uid="uid://ddd3ekmekqxbb"]

[ext_resource type="Texture2D" uid="uid://cbrkswxjhl0he" path="res://art/graphics/bg/Background2.jpg" id="1_4yt8u"]
[ext_resource type="Script" uid="uid://cq8mx0ala6plq" path="res://scripts/gui/main_ui/gui.gd" id="1_k8xsf"]
[ext_resource type="PackedScene" uid="uid://bieiqc1mo6u2r" path="res://scenes/components/top_bar.tscn" id="4_7yii4"]
[ext_resource type="Texture2D" uid="uid://bn07d4p3ahgbg" path="res://art/graphics/GreenKid.png" id="6_qupqx"]
[ext_resource type="PackedScene" uid="uid://mgklm4qm7xq8" path="res://scenes/components/popups/tutorial.tscn" id="7_jw8q3"]
[ext_resource type="PackedScene" uid="uid://b58mhp2m3rr8y" path="res://scenes/components/popups/reset_popup.tscn" id="8_xki8e"]

[node name="Gui" type="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k8xsf")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_4yt8u")

[node name="GreenKid" type="TextureRect" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -225.0
offset_right = 172.0
grow_vertical = 0
texture = ExtResource("6_qupqx")

[node name="TutorialPopup" parent="." instance=ExtResource("7_jw8q3")]
modulate = Color(1, 1, 1, 0)
top_level = true
offset_left = 200.0
offset_top = 247.0
offset_right = 812.0
offset_bottom = 537.0

[node name="ResetPopup" parent="." instance=ExtResource("8_xki8e")]
visible = false
modulate = Color(1, 1, 1, 0)
top_level = true
offset_left = 200.0
offset_top = 193.0
offset_right = 812.0
offset_bottom = 547.0

[node name="TopBar" parent="." instance=ExtResource("4_7yii4")]
layout_mode = 1
anchors_preset = 5
anchor_top = 0.0
anchor_bottom = 0.0
offset_top = 37.0
offset_bottom = 101.0
grow_vertical = 1

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="game_start" from="TutorialPopup" to="." method="_on_tutorial_popup_game_start"]
[connection signal="cancel" from="ResetPopup" to="." method="_on_reset_popup_cancel"]
[connection signal="retry_pressed" from="TopBar" to="." method="_on_top_bar_retry_pressed"]

[editable path="TopBar"]
